# sparkleforge

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.sandbox  README.md  docker-compose.yaml  env.example  install.sh  main.py  package.json  pyproject.toml  requirements.txt
archive/: debug_validator.py
common/: a2a_adapter.py  sparkleforge_a2a_wrapper.py  sparkleforge_entry_point.py
configs/: browser_config.yaml  mcp_config.json  mcp_config.json.bak  skills_registry.json  storage_config.yaml  tools_config.json
docs/: ARCHITECTURE.md  SKILLS_IMPLEMENTATION.md
examples/: basic_usage.md
local_researcher_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: analyze_dependencies.py  analyze_usage.py  benchmark_baseline.py  check_mcp_servers.py  check_syntax.py  check_test_code.py  cleanup_src.py  collect_todos.py  diagnose_smithery_mcp.py  generate_report_from_results.py  run.sh  run_orchestrator.py  setup.sh  verify_mcp_servers.py  visualize_langgraph.py
skills/cli_anything_builder/: SKILL.md  skill.yaml
skills/evaluator/: SKILL.md
skills/research_executor/: SKILL.md
skills/research_planner/: SKILL.md
skills/synthesizer/: SKILL.md
src/: __init__.py
src/agents/: __init__.py  autonomous_researcher.py  codebase_agent.py  creativity_agent.py  document_organizer_agent.py  evaluation_agent.py  greedy_overseer_agent.py  research_agent.py  synthesis_agent.py  task_analyzer.py  validation_agent.py
src/automation/: browser_manager.py
src/cli/: completion.py  entry.py  history.py  index.js  interactive_cli.py  local_researcher_cli.js  output.py  repl_cli.py  skill_creator.py
src/core/: a2ui_generator.py  a2ui_handler.py  adaptive_memory.py  adaptive_research_depth.py  agent_orchestrator.py  agent_pool.py  agent_result_sharing.py  agent_security.py  agent_tool_selector.py  agent_tool_wrapper.py  approval_gate.py  autonomous_orchestrator.py  checkpoint_manager.py  composio_integration.py  compression.py  concurrency_manager.py  config.py  context_analytics.py  context_cache.py  context_engineer.py  context_loader.py  council_activator.py  cross_agent_tools.py  dag_visualizer.py  direct_api_manager.py  dynamic_sub_agent_factory.py  dynamic_workflow.py  era_client.py  era_server_manager.py  error_handler.py  exceptions.py  feature_flags.py  git_workflow.py  guardian_agent.py  guardrails_validator.py  human_clarification_handler.py  input_router.py  iterative_research.py  llm_council.py  llm_loop_manager.py  (+68 more)
tests/: test_agent_result_sharing.py  test_context_engineering_qa.py  test_deepmcp_integration.py  test_enhanced_systems.py  test_langfuse_ops_qa.py  test_mcp_connection.py  test_mcp_tools.py  test_orchestrator.py  test_parallel_execution.py  test_parallel_with_sharing.py  test_production_upgrade.py  test_simple.py  test_skill_tree_integration.py  test_smithery_mcp.py  test_sota_modules.py
(+200 files in other folders)
